{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 457,
  "lineage": "c9cf4cbb-fba8-3cdb-8cfd-71450be70246",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "etp_development_server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:925272389726:loadbalancer/net/etp-development-server-lb/a35086b6fed29e44",
            "arn_suffix": "net/etp-development-server-lb/a35086b6fed29e44",
            "dns_name": "etp-development-server-lb-a35086b6fed29e44.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:925272389726:loadbalancer/net/etp-development-server-lb/a35086b6fed29e44",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "etp-development-server-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-039406f4a5883c380"
              },
              {
                "subnet_id": "subnet-09842a802e8127808"
              },
              {
                "subnet_id": "subnet-0d5140564c42b6593"
              }
            ],
            "subnets": [
              "subnet-039406f4a5883c380",
              "subnet-09842a802e8127808",
              "subnet-0d5140564c42b6593"
            ],
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02bc14ac161448e36",
            "zone_id": "Z18D5FSROUN65G"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "etp_development_server_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:925272389726:listener/net/etp-development-server-lb/a35086b6fed29e44/ccf0160b7708e6b4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:925272389726:targetgroup/etp-development-server-lbtg/a2ceb43d591c198b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:925272389726:listener/net/etp-development-server-lb/a35086b6fed29e44/ccf0160b7708e6b4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:925272389726:loadbalancer/net/etp-development-server-lb/a35086b6fed29e44",
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.etp_development_server_lb",
            "aws_lb_target_group.etp_development_server_lb_target_group",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "etp_development_server_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:925272389726:targetgroup/etp-development-server-lbtg/a2ceb43d591c198b",
            "arn_suffix": "targetgroup/etp-development-server-lbtg/a2ceb43d591c198b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:925272389726:targetgroup/etp-development-server-lbtg/a2ceb43d591c198b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "etp-development-server-lbtg",
            "port": 22,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "etp_development_server_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:925272389726:targetgroup/etp-development-server-lbtg/a2ceb43d591c198b-20230214033914235400000002",
            "port": 22,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:925272389726:targetgroup/etp-development-server-lbtg/a2ceb43d591c198b",
            "target_id": "i-06c2a58e9a70a69f7"
          },
          "dependencies": [
            "aws_key_pair.etp_development_server_key_pair",
            "aws_lb_target_group.etp_development_server_lb_target_group",
            "aws_security_group.etp_development_server_security_group",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "module.etp_development_server.aws_instance.this",
            "module.etp_development_server.aws_spot_instance_request.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "etp_development_server_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:security-group/sg-0baf29096afe998f2",
            "description": "ETP Development Server Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9999
              }
            ],
            "id": "sg-0baf29096afe998f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9999
              }
            ],
            "name": "etp_development_server_security_group",
            "name_prefix": "",
            "owner_id": "925272389726",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:security-group/sg-0b9971d47f723285b",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d0e6ffc839cd0015"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d0e6ffc839cd0015"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-0b9971d47f723285b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d0e6ffc839cd0015"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my_cluster-cluster-20230211130137258600000003",
            "name_prefix": "my_cluster-cluster-",
            "owner_id": "925272389726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "my_cluster-cluster",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "my_cluster-cluster",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:security-group/sg-0d0e6ffc839cd0015",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9971d47f723285b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-0d0e6ffc839cd0015",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9971d47f723285b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9971d47f723285b"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "my_cluster-node-20230211130137270300000004",
            "name_prefix": "my_cluster-node-",
            "owner_id": "925272389726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "my_cluster-node",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "owned",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "my_cluster-node",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "owned",
              "projectName": "my_eks_template"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3703097606",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b9971d47f723285b",
            "security_group_rule_id": "sgr-09105cad8a0c8b0b7",
            "self": false,
            "source_security_group_id": "sg-0d0e6ffc839cd0015",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1131588409",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b9971d47f723285b",
            "security_group_rule_id": "sgr-064a3acdb4752bab8",
            "self": false,
            "source_security_group_id": "sg-0d0e6ffc839cd0015",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1019369356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b9971d47f723285b",
            "security_group_rule_id": "sgr-0488b2cca8fc7c9de",
            "self": false,
            "source_security_group_id": "sg-0d0e6ffc839cd0015",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4218555413",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d0e6ffc839cd0015",
            "security_group_rule_id": "sgr-0c3833e450deba248",
            "self": false,
            "source_security_group_id": "sg-0b9971d47f723285b",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-1334488333",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d0e6ffc839cd0015",
            "security_group_rule_id": "sgr-0c0914a8d2003d236",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-2421461011",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d0e6ffc839cd0015",
            "security_group_rule_id": "sgr-04cfb1ad72cebf761",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-4006262046",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d0e6ffc839cd0015",
            "security_group_rule_id": "sgr-0415099bce463dc64",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1968293607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d0e6ffc839cd0015",
            "security_group_rule_id": "sgr-0bb0ec8d3c7c08f70",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4214637697",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d0e6ffc839cd0015",
            "security_group_rule_id": "sgr-068ae5299a6f1470d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2565290821",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d0e6ffc839cd0015",
            "security_group_rule_id": "sgr-0c3833e450deba248",
            "self": false,
            "source_security_group_id": "sg-0b9971d47f723285b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1631582152",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d0e6ffc839cd0015",
            "security_group_rule_id": "sgr-0ab9d19ed921b679e",
            "self": false,
            "source_security_group_id": "sg-0b9971d47f723285b",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3949358189",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d0e6ffc839cd0015",
            "security_group_rule_id": "sgr-040808a2a42810ab1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1329188738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d0e6ffc839cd0015",
            "security_group_rule_id": "sgr-015cd794ae856e7b9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints_kubernetes_addons.module.aws_cloudwatch_metrics[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "amazon-cloudwatch",
            "metadata": [
              {
                "generation": 0,
                "name": "amazon-cloudwatch",
                "resource_version": "842",
                "uid": "476e29f1-8b60-4ae8-b69c-a8f53dfc78bf"
              }
            ],
            "timeouts": {
              "delete": "15m"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.this",
            "module.eks_blueprints.data.aws_caller_identity.current",
            "module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks_blueprints.data.aws_iam_session_context.current",
            "module.eks_blueprints.data.aws_partition.current",
            "module.eks_blueprints.data.aws_region.current",
            "module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks_blueprints.module.aws_eks.data.aws_caller_identity.current",
            "module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.eks_blueprints.module.aws_eks.module.kms.data.aws_caller_identity.current",
            "module.eks_blueprints.module.aws_eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_blueprints.module.aws_eks.module.kms.data.aws_partition.current",
            "module.eks_blueprints.module.kms.aws_kms_key.this",
            "module.eks_blueprints_kubernetes_addons.data.aws_caller_identity.current",
            "module.eks_blueprints_kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks_blueprints_kubernetes_addons.data.aws_partition.current",
            "module.eks_blueprints_kubernetes_addons.data.aws_region.current",
            "module.eks_blueprints_kubernetes_addons.time_sleep.dataplane",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_blueprints_kubernetes_addons.module.cert_manager[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "cert-manager",
            "metadata": [
              {
                "generation": 0,
                "name": "cert-manager",
                "resource_version": "830",
                "uid": "bf20031a-7daf-4fd0-a17e-c6501c6db46e"
              }
            ],
            "timeouts": {
              "delete": "15m"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.this",
            "module.eks_blueprints.data.aws_caller_identity.current",
            "module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks_blueprints.data.aws_iam_session_context.current",
            "module.eks_blueprints.data.aws_partition.current",
            "module.eks_blueprints.data.aws_region.current",
            "module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks_blueprints.module.aws_eks.data.aws_caller_identity.current",
            "module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.eks_blueprints.module.aws_eks.module.kms.data.aws_caller_identity.current",
            "module.eks_blueprints.module.aws_eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_blueprints.module.aws_eks.module.kms.data.aws_partition.current",
            "module.eks_blueprints.module.kms.aws_kms_key.this",
            "module.eks_blueprints_kubernetes_addons.data.aws_caller_identity.current",
            "module.eks_blueprints_kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks_blueprints_kubernetes_addons.data.aws_partition.current",
            "module.eks_blueprints_kubernetes_addons.data.aws_region.current",
            "module.eks_blueprints_kubernetes_addons.module.cert_manager.aws_iam_policy.cert_manager",
            "module.eks_blueprints_kubernetes_addons.module.cert_manager.data.aws_iam_policy_document.cert_manager_iam_policy_document",
            "module.eks_blueprints_kubernetes_addons.module.cert_manager.data.aws_route53_zone.selected",
            "module.eks_blueprints_kubernetes_addons.time_sleep.dataplane",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.etp_development_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee3d9a8776e8b99c",
            "arn": "arn:aws:ec2:us-west-2:925272389726:instance/i-06c2a58e9a70a69f7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c2a58e9a70a69f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "etp_development_server_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b6bc79bc3cad135",
            "private_dns": "ip-10-0-10-58.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.58",
            "public_dns": "ec2-34-216-210-87.us-west-2.compute.amazonaws.com",
            "public_ip": "34.216.210.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08254525cb8f275c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03aac032ec8f3ffa6",
            "tags": {
              "Environment": "dev",
              "Name": "etp_development_server",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "etp_development_server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "etp_development_server"
            },
            "vpc_security_group_ids": [
              "sg-0baf29096afe998f2"
            ]
          },
          "dependencies": [
            "aws_key_pair.etp_development_server_key_pair",
            "aws_security_group.etp_development_server_security_group",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:network-acl/acl-0b76e29f07da9a666",
            "default_network_acl_id": "acl-0b76e29f07da9a666",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b76e29f07da9a666",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "925272389726",
            "subnet_ids": [
              "subnet-01a85bfec868ad80e",
              "subnet-039406f4a5883c380",
              "subnet-03aac032ec8f3ffa6",
              "subnet-05280399cd44303f4",
              "subnet-09842a802e8127808",
              "subnet-0d5140564c42b6593"
            ],
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-default",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-default",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:route-table/rtb-00d01864f0b8c040d",
            "default_route_table_id": "rtb-00d01864f0b8c040d",
            "id": "rtb-00d01864f0b8c040d",
            "owner_id": "925272389726",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-default",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-default",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:security-group/sg-0c7cbe046b523ac80",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c7cbe046b523ac80",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "925272389726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-default",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-default",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9f580bedff6dc85",
            "association_id": "eipassoc-08a755a371b017bd5",
            "domain": "vpc",
            "id": "eipalloc-0d9f580bedff6dc85",
            "network_border_group": "us-west-2",
            "network_interface": "eni-059acfea493a61944",
            "private_dns": "ip-10-0-0-106.us-west-2.compute.internal",
            "private_ip": "10.0.0.106",
            "public_dns": "ec2-44-230-170-30.us-west-2.compute.amazonaws.com",
            "public_ip": "44.230.170.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-us-west-2a",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-us-west-2a",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:internet-gateway/igw-0c2b1ed6bd945ce8b",
            "id": "igw-0c2b1ed6bd945ce8b",
            "owner_id": "925272389726",
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9f580bedff6dc85",
            "connectivity_type": "public",
            "id": "nat-01ffb4e49ebb7493c",
            "network_interface_id": "eni-059acfea493a61944",
            "private_ip": "10.0.0.106",
            "public_ip": "44.230.170.30",
            "subnet_id": "subnet-09842a802e8127808",
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-us-west-2a",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-us-west-2a",
              "environment": "production",
              "projectName": "my_eks_template"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-084564fa2908185281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01ffb4e49ebb7493c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-084564fa290818528",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c2b1ed6bd945ce8b",
            "id": "r-rtb-0e6bb10e9f02e6c511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e6bb10e9f02e6c51",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:route-table/rtb-084564fa290818528",
            "id": "rtb-084564fa290818528",
            "owner_id": "925272389726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01ffb4e49ebb7493c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-private",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-private",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:route-table/rtb-0e6bb10e9f02e6c51",
            "id": "rtb-0e6bb10e9f02e6c51",
            "owner_id": "925272389726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2b1ed6bd945ce8b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-public",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-public",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d384b2dc3ad4009",
            "route_table_id": "rtb-084564fa290818528",
            "subnet_id": "subnet-03aac032ec8f3ffa6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cd72336ef175fcd",
            "route_table_id": "rtb-084564fa290818528",
            "subnet_id": "subnet-05280399cd44303f4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01219d9b4016e0dce",
            "route_table_id": "rtb-084564fa290818528",
            "subnet_id": "subnet-01a85bfec868ad80e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e14559f284c7d86",
            "route_table_id": "rtb-0e6bb10e9f02e6c51",
            "subnet_id": "subnet-09842a802e8127808"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0331e1ddbd15f61dd",
            "route_table_id": "rtb-0e6bb10e9f02e6c51",
            "subnet_id": "subnet-039406f4a5883c380"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0457a958768fbb221",
            "route_table_id": "rtb-0e6bb10e9f02e6c51",
            "subnet_id": "subnet-0d5140564c42b6593"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:subnet/subnet-03aac032ec8f3ffa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aac032ec8f3ffa6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925272389726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-private-us-west-2a",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-private-us-west-2a",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "projectName": "my_eks_template"
            },
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:subnet/subnet-05280399cd44303f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05280399cd44303f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925272389726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-private-us-west-2b",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-private-us-west-2b",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "projectName": "my_eks_template"
            },
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:subnet/subnet-01a85bfec868ad80e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a85bfec868ad80e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925272389726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-private-us-west-2c",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-private-us-west-2c",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "projectName": "my_eks_template"
            },
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:subnet/subnet-09842a802e8127808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09842a802e8127808",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925272389726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-public-us-west-2a",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-public-us-west-2a",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "projectName": "my_eks_template"
            },
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:subnet/subnet-039406f4a5883c380",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039406f4a5883c380",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925272389726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-public-us-west-2b",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-public-us-west-2b",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "projectName": "my_eks_template"
            },
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:subnet/subnet-0d5140564c42b6593",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5140564c42b6593",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925272389726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-public-us-west-2c",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap-public-us-west-2c",
              "environment": "production",
              "kubernetes.io/cluster/my_cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "projectName": "my_eks_template"
            },
            "vpc_id": "vpc-02bc14ac161448e36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925272389726:vpc/vpc-02bc14ac161448e36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b76e29f07da9a666",
            "default_route_table_id": "rtb-00d01864f0b8c040d",
            "default_security_group_id": "sg-0c7cbe046b523ac80",
            "dhcp_options_id": "dopt-03db5656c4749e4aa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02bc14ac161448e36",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d01864f0b8c040d",
            "owner_id": "925272389726",
            "tags": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap",
              "environment": "production",
              "projectName": "my_eks_template"
            },
            "tags_all": {
              "Blueprint": "terraform-aws-bootstrap",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "terraform-aws-bootstrap",
              "environment": "production",
              "projectName": "my_eks_template"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}